@@ -14,6 +14,7 @@ span.label {
 // BUTTONS
 a.button, span.button {
 	display: inline-block;
+	vertical-align: baseline;
 	cursor: pointer;
 	@include box-shadow( 0px 1px 1px rgba(0,0,0,0.15) );
 	@include border-radius(4px);
@@ -21,7 +22,7 @@ a.button, span.button {
 	font: bold 12px/1.3 $sans;
 	text-decoration: none;
 	color: $dark2;
-	padding: 3px 10px 2px;
+	padding: 3px 10px;
 	width: auto;
 	&:active, &.active { @include buttonize( $light1, $white ); @include box-shadow( none ); }
 	&.disabled { @include buttonize( $light1, $light1); color: $light2; @include box-shadow( none ); }
@@ -31,8 +32,7 @@ a.button, span.button {
 	&.small { padding: 0px 6px; font-size: 11px; line-height: 1.4; }
 }
 
-@mixin form_button { display: inline-block; vertical-align: text-bottom; } // For anchor or span buttons placed next to form buttons or submits.
-@mixin inline_submit { display: inline-block; vertical-align: top; } // For submit buttons placed inline beside a one-input form.
+@mixin inline_submit { display: inline-block; vertical-align: baseline; } // For submit buttons placed inline beside a one-input form.
 
 div.alert_message {
 	@include border-radius(4px); color: $white; padding: 7px 12px; margin-bottom: $baseline; @include box-shadow;
